<resources>
    <string name="app_name">Uworthy</string>
    <string name="dotline"><hr>Already have an account ,Login.</hr></string>
    <string name="title_activity_supportpeople">Supportpeople</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="storiesone">1)

Gervase struggled with depression twice in her life â€ both dealt with life and death.

The first time was after her brother died, and the second was after she gave birth to a child, who is now 14 months old. Her brotherâ€™s death resonated with her entire family, but it really hit her hard. It was a sign that everything doesnâ€™t last forever, she said.

â€œThe death of my brother changed how I prioritized people and events moving forward,"Â Gervase wrote in a blog post. "I skimmed the fat from my life and made peace with my own demons."

Then, she met Kevin, and the two had a child in 2013 â€ Aria Rose. Her daughter's birth also spawned depression for Gervase. It wasnâ€™t so much having a daughter that made her depressed, but rather her having to re-evaluate who she was as a person. She could no longer be the partier she once was. She had to be responsible.

But soon, little Aria helped Gervase rise up and overcome her depression.

â€œAria is my compass,â€ Gervase said in her blog post. â€œMy â€˜why.â€™ She is the reason I quit my sales job in February 2014 and went full time as a life coach. My intuition would not be quieted. And I deeply respect that little voice. My life's experiences have taught me a powerful lesson about the undervalued strength to be found in our raw human connections our relationships.â€

She also told Deseret News National that yoga helped her overcome her struggles, too: â€œOutside exercise is really the secret key to battling depression, as it gets endorphins pumping, which are needed,â€ she said.
</string>
    <string name="stories2">2)"\n"

Kate MacHugh is now 25. Sheâ€™s an author and clinician.

But she only got to where she is now by overcoming depression as a teenager.

MacHugh said she was â€œharassed, humiliated and cyberbullied,â€ during her teenage years, leading her to go from being a happy and vibrant youngster to someone more angry and â€œsullen.â€ Once she became a different person, she slowly slipped into the murky waters of depression.

â€œIt was the lowest I have ever felt in my life," she said to the National.

But everything changed once she went to college. The peers who had put her down and bullied her within the walls of high school were long gone, and she could finally start focusing on what made her unique and special. Instilling confidence in herself was what got her past depression and on a path to success, she said.

â€œI worked really hard to change the messages in my head,â€ MacHugh said. â€œI was led to believe that I was ugly, worthless, and disgusting. I internalized these messages and they became part of my identity. I began to tell myself that I was smart, loved and beautiful."
</string>
    <string name="storiesthree">
        3)



Jay Lowder overcame depression by finding God.

He was 21 when everything went south. He was dumped, he lost his car and he found himself unemployed all at once. Things began to spiral out of control from there. Depression settled in and Lowder turned to the bottle as a source of escape.

Things took a dark turn for Lowder. But with the help of his roommate, and religion, he overcome his struggle with depression.

He was invited to an event hosted by a preacher, and it was there that he rediscovered his faith in God and religion. It has helped him grow his faith as an evangelist.

Heâ€™s looking to spread that message now across the world.

    </string>
    <string name="stories4">
        4)



Lenore Hirsch was 57 when she first felt depressed.

When her husband discovered that his previously beaten brain tumor was back, her life took on a darker shade. She struggled to function after his surgery to remove the tumor and couldnâ€™t handle the problems associated with aiding her husband while also living in a small place: â€œI found myself having fits of crying I couldn\'t stop,â€ she said.

But how did Hirsch overcome that depression? By writing.

Once her husband passed away, Hirsch focused her attention on writing and building her career, which allowed her work through the demons that hung on her shoulder.

    </string>
    <string name="stories5">
       5)


There was a time when Ingrid couldnâ€™t get out of bed. She didnâ€™t feel inspired.

Though many would say she is jovial and happy-go-lucky, there was a sudden change for her. She would just start crying in the middle of the day, and she didnâ€™t know why: â€œI could feel that my hormones were taking me into a very dark place,â€ she said.

She turned to yoga and exercise for help, but that did very little in aiding her: â€œI would leave class feeling depleted and still sad,â€ she said.

So how did she overcome depression? She spoke with her nutritionist, who told her to start taking a natural supplement that helped her balance out her hormones and stray away from the darker emotions

    </string>
    <string name="stories6">
        6)



Kate Chapman, 44, used a variety of techniques to overcome her depression.

Her depression story is an ongoing one. Sometimes she will slip into depressed moods when she forgets to take care of herself personally, whether thatâ€™s emotional or physical care.

But when she uses massage therapy, aromatherapy and comfort foods, she steps away from the darkness and feels better. Chapman also spends her time doing more creative and artistic things, which limit her from falling into a dark place.

â€œI have found that when I use external and internal medicines in conscious combination, my depression stays a thing of the past,â€ she said.

    </string>
    <string name="stories7">
        7)



Wendy Honeycutt started feeling depressed after her mother and brother died, and her 12-year-old son passed away.

Instead of letting depression take her over, she found nutrients that could boost her mood, and with those nutrients, she started leading a better life, she said. But there was more to how she recovered.

She also re-established her faith.

â€œMy spiritual walk with Jesus has played a huge role in my battle with depression and my faith also enables me to live free of depression,â€ she said.


    </string>
    <string name="stories8">
        8)



Kim Hardyâ€™s depression started when she lost her business.

It was hard losing something she started from the ground up, and it hit her hard. She struggled with depression.

But as a wife and mother, â€œI had so much to live for,â€ Hardy said.

So now, Hardy is looking to help others beat depression. She recommends that people focus on themselves, acknowledge their depression and understand what battle theyâ€™ll have to wage. Then create a plan to beat it and understand it may be a bit of struggle. Lastly, she advises people to re-evaluate where they are in their own minds and how they think things are going in their life.

â€œSometimes that was only 15 minutes to 45 minutes,â€ Hardy said. â€œWhatever time I had, I made me a priority. I discovered I loved this time I had to reflect, process and pamper myself. Today, I am a thankful woman.â€



    </string>
    <string name="stories9">
        9)



Drew Farnsworth isnâ€™t very open about his depression, or his attempt at suicide.

When in college 14 years ago, Farnsworth almost died by suicide, But his roommate found him in time, and thatâ€™s where everything changed.

He went to college, got a degree and now owns two businesses. He thanks his family and those around him for helping him rise above depression.

â€œWith the help of my family, many therapists, numerous pharmaceuticals, very good habits and a lot of time, I have been able to live a healthy and mostly happy life,â€ Farnsworth said.



    </string>
    <string name="diteone">
       
Omega-3 fats aid in connecting brain cells as well as making the receptor sites for neurotransmitters stronger which leads to increase in serotonin production. Therefore, this causes a person to feel happy and less depressed.

Following are the eatable items containing Omega-3:
1.	Fish: It contains huge source of Omega-3 fats.
2.	Seeds: a. Chia seeds (61% of Omega-3)
      b. Flax seeds ( % of Omega-3)
      c. Squash seeds (58 % of Omega-3)
      d. Pumpkin seeds (58% 0f Omega-3. It contains tryptophan which is an amino acid that produces niacin which helps to create serotonin.)

    </string>
    <string name="dite2">
       
One of the reasons of eating green leafy vegetable is good for depression because it contains excellent source of ALA.
There are three types of Omega-3 fatty acids: ALA, DHA, and EPA.
Some better sources of ALA: a. Brussels sprouts
				b. Spinach
				c. Darker and green vegetables which contains fibre and other nutrients.

    </string>
    <string name="dite3">
       
Good Fruits are good for depression because they contain dopamine and Vitamin B6 as well as serves mood enhancer and as an antioxidant. 
Vitamin C nourishes the neurons existing in the brain.
Better source of dopamine:
a.	Banana (10mg of dopamine)
b.	 Oranges (It contains large amount of Vitamin C (Ascorbic acid), Folet, complex sugars.
c.	 Blueberries: It protects against free radical damage



    </string>
    <string name="menu_insert">Insert</string>
    <string name="menu_delete">Delete</string>
    <string name="title_activity_user_home">User_home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_counsellorhome">Counsellorhome</string>
</resources>
