<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Storiesactivity">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/textView42"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Gervase" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp">

                        <TextView
                            android:id="@+id/textView33"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/storiesone" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/textView43"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Kate MacHugh" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/textView34"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/stories2" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/textView44"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Jay Lowder" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/textView35"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/storiesthree" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/textView45"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Lenore Hirsch" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/textView36"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/stories4" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/textView46"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Ingrid" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/textView37"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/stories5" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/textView47"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Kate Chapman" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/textView38"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/stories6" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/textView48"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Wendy Honeycutt" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/textView39"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/stories7" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                        <TextView
                            android:id="@+id/textView49"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Kim Hardy" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp">

                        <TextView
                            android:id="@+id/textView40"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/stories8" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                        <TextView
                            android:id="@+id/textView50"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Drew Farnsworth" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp">

                        <TextView
                            android:id="@+id/textView41"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/stories9" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
        </TableLayout>
</ScrollView>